--- a/package.json
+++ b/package.json
@@ -12,25 +12,30 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
+    "axios": "^0.25.0",
     "date-fns": "^2.28.0",
+    "node-summary": "https://github.com/TroniPM/node-summary",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/node-summary": "^1.2.0",
     "@types/react-native": "^0.66.4",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^26.6.3",
