--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native": "0.66.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-showdown": "^1.0.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-webview": "^11.17.0",
     "remove-markdown": "^0.3.0",
     "sbd": "^1.0.19",
     "styled-components": "^5.3.3",
