--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "polished": "^4.1.4",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-multiple-select": "^0.5.7",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-showdown": "^1.0.1",
