--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
+    "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
     "polished": "^4.1.4",
     "react": "17.0.2",
