--- a/.github/workflows/pr-to-gchat.yml
+++ b/.github/workflows/pr-to-gchat.yml
@@ -21,5 +21,5 @@ jobs:
           PR_URL: ${{ github.event.pull_request.html_url }}
           PR_AUTHOR: ${{ github.event.pull_request.user.login }}
         run: |
-            pip install requests
-            python $GITHUB_WORKSPACE/.github/workflows/send_to_gchat.py
+          pip install requests
+          python .github/scripts/send_to_gchat.py
