--- a/.github/workflows/pr-to-gchat.yml
+++ b/.github/workflows/pr-to-gchat.yml
@@ -8,14 +8,6 @@ jobs:
   notify-gchat:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
       - name: Enviar PR para Google Chat
         env:
           GCHAT_WEBHOOK_URL: ${{ secrets.GCHAT_WEBHOOK_URL }}
@@ -25,5 +17,10 @@ jobs:
           PR_AUTHOR: ${{ github.event.pull_request.user.login }}
           PR_STATUS: ${{ github.event.action }}
         run: |
-          pip install requests
-          python .github/scripts/send_to_gchat.py
+          MESSAGE="{
+            \"text\": \"*Novo evento de Pull Request*: \`${PR_STATUS}\`\n\n📌 *Título:* ${PR_TITLE}\n📝 *Descrição:* ${PR_BODY}\n👤 *Autor:* ${PR_AUTHOR}\n🔗 *Link:* ${PR_URL}\"
+          }"
+
+          curl -X POST -H 'Content-Type: application/json' \
+            -d "${MESSAGE}" \
+            "$GCHAT_WEBHOOK_URL"
